--- a/POS.html
+++ b/POS.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 
+    
     <div class="sidebar">
         <div class="sidebar-header">SM MEGAMALL</div>
         <div class="sidebar-menu">
             <a href="pos.html" class="menu-item active"><i>🛒</i> Point of Sale</a>
-            <a href="#" class="menu-item disabled" style="display:none;"><i>📊</i> Dashboard (Locked)</a>
+            <a href="transactions.html" class="menu-item"><i>📜</i> Transactions</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
-            <a href="#" class="menu-item disabled" style="display:none;"><i>📋</i> Inventory (Admin Only)</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
         </div>
     </div>
+
 
     <div class="main-content">
         <div class="top-bar">
@@ -51,6 +52,23 @@
                     </div>
                 </div>
 
+<div style="margin-top: auto; padding-top: 5px; display: flex; justify-content: space-evenly; align-items: center;">
+    <div class="">
+    <div class="cashier-op">
+        <label>SERVICE FEE</label>
+        <input type="number" id="service_fee_input" placeholder="0.00" onkeypress="handleServiceEnter(event)">
+    </div>
+    </div>
+
+    <div class="">
+    <label>Customer type</label>
+    <div class="cashier-grid1">
+        <label class="cashier-opt"><input type="radio" name="customer" value="IAYC SERVICE FEE" onchange="updateUI()">IAYC</label>
+        <label class="cashier-opt"><input type="radio" name="customer" value="NON-IAYC SERVICE FEE" checked onchange="updateUI()">NON-IAYC</label>
+    </div>
+    </div>
+</div>
+
                 <div style="margin-top: auto; padding-top: 20px;">
                     <label>Verify Seller ID</label>
                     <div class="cashier-grid">
@@ -76,6 +94,18 @@
                     </div>
                     <div class="total-row"><span>Subtotal:</span><span id="subtotal-val">₱0.00</span></div>
                     <div class="total-row" style="color:#f1c40f;"><span>Discount:</span><span id="discount-val">-₱0.00</span></div>
+
+                    
+                    <div class="grand-total" style="font-weight: normal;">
+                        <div class="total-row" style="color:white;"><span>VATable Sales:</span></div>
+                        <div class="total-row" style="color:white;"><span id="VATable-val">₱0.00</span></div>
+                    </div>
+
+                    <div class="grand-total" style="font-weight: normal; border-top: none; margin-top: -18px;">
+                        <div class="total-row" style="color:white;"><span>VAT:</span></div>
+                        <div class="total-row" style="color:white;"><span id="VAT-val">₱0.00</span></div>
+                    </div>
+
                     <div class="grand-total">
                         <span>TOTAL</span>
                         <span id="total-val">₱0.00</span>
