--- a/transactions.html
+++ b/transactions.html
@@ -11,7 +11,7 @@
     <div class="sidebar">
         <div class="sidebar-header">SM MEGAMALL</div>
         <div class="sidebar-menu">
-            <a href="pos.html" class="menu-item"><i>🛒</i> Point of Sale</a>
+            <a href="POS.html" class="menu-item"><i>🛒</i> Point of Sale</a>
             <a href="transactions.html" class="menu-item active"><i>📜</i> Transactions</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
@@ -193,4 +193,5 @@
     window.onload = loadTransactions;
     </script>
 </body>
+
 </html>
