--- a/stocks.html
+++ b/stocks.html
@@ -178,9 +178,9 @@
     <div class="sidebar">
         <div class="sidebar-header">SM MEGAMALL</div>
         <div class="sidebar-menu">
-            <a href="POS.html" class="menu-item active"><i>🛒</i> Point of Sale</a>
+            <a href="POS.html" class="menu-item"><i>🛒</i> Point of Sale</a>
             <a href="transactions.html" class="menu-item"><i>📜</i> Transactions</a>
-            <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
+            <a href="stocks.html" class="menu-item active"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
         </div>
     </div>
