--- a/POS.html
+++ b/POS.html
@@ -14,6 +14,7 @@
         <div class="sidebar-menu">
             <a href="POS.html" class="menu-item active"><i>🛒</i> Point of Sale</a>
             <a href="transactions.html" class="menu-item"><i>📜</i> Transactions</a>
+            <a href="delivery.html" class="menu-item"><i>🚚</i> Stock Delivery</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
         </div>
