--- a/admin_smne.html
+++ b/admin_smne.html
@@ -70,8 +70,8 @@
                 <i class="arrow-icon" id="arrow-dash">▶</i>
             </div>
             <div class="dropdown-container" id="dash-dropdown">
-                <a href="admin.html" class="menu-link active">● SM MEGAMALL</a>
-                <a href="admin_smne.html" class="menu-link">● SM NORTH EDSA</a>
+                <a href="admin.html" class="menu-link">● SM MEGAMALL</a>
+                <a href="admin_smne.html" class="menu-link active">● SM NORTH EDSA</a>
             </div>
             
             <div class="menu-link dropdown-btn" onclick="toggleDropdown('trans-dropdown', 'arrow-trans')">
@@ -91,7 +91,7 @@
 
     <div class="main-container">
         <div class="top-nav">
-            <h3 style="color: var(--text-dark);">SM MEGAMALL Store Analytics <span id="sync-status">Syncing...</span></h3>
+            <h3 style="color: var(--text-dark);">SM NORTH EDSA Store Analytics <span id="sync-status">Syncing...</span></h3>
             <div class="admin-profile" style="display: flex; align-items: center; gap: 15px;">
                 <div style="text-align: right;">
                     <div style="font-weight: bold; font-size: 0.9rem;">Administrator</div>
@@ -157,7 +157,7 @@
     </div>
 
     <script>
-    const SHEETS_URL = "https://script.google.com/macros/s/AKfycbzpArDNWwE8sDpmSX8BFpnBNtBM7EWIYic55PjFMnEpsX8iH7Nm7lWIk76OFZIH85ZW/exec";
+    const SHEETS_URL = "https://script.google.com/macros/s/AKfycbwoJ_5VDObaBae7N1GjVcEr6H1Mv_gwxvZlPuHWo_RyFCCbOvdq22Oym-G-aJ6p-y8/exec";
     
     let allInventoryData = []; 
     let allTransactionData = []; 
