--- a/delivery.html
+++ b/delivery.html
@@ -29,6 +29,7 @@
             <a href="POS.html" class="menu-item"><i>🛒</i> Point of Sale</a>
             <a href="transactions.html" class="menu-item"><i>📜</i> Transactions</a>
             <a href="delivery.html" class="menu-item active"><i>🚚</i> Stock Delivery</a>
+			<a href="cashier_approvals.html" class="menu-item"><i>⏳</i> My Pending Stocks</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
         </div>
@@ -65,8 +66,9 @@
                     <small style="color: #666; line-height: 1.4; display: block;">
                         <strong>Instruction:</strong><br>
                         1. Piliin ang <b>Item Name</b>.<br>
-                        2. Siguraduhing may <b>Price</b> (Automatic itong lalabas kung existing ang item).<br>
-                        3. I-scan ang <b>Barcodes</b>.
+                        2. Siguraduhing may <b>Price</b>.<br>
+                        3. I-scan ang <b>Barcodes</b>.<br>
+                        4. Click <b>Send for Approval</b>.
                     </small>
                 </div>
             </div>
@@ -96,14 +98,14 @@
                     <div style="display:flex; justify-content: space-between; margin-bottom: 10px; font-weight: 600;">
                         <span>TOTAL SCANNED UNITS: <span id="summary-qty">0</span></span>
                     </div>
-                    <button class="btn-upload" onclick="submitToWebApp()">🚀 UPLOAD TO GOOGLE SHEETS</button>
+                    <button class="btn-upload" onclick="submitToWebApp()">🚀 SEND FOR ADMIN APPROVAL</button>
                 </div>
             </div>
         </div>
     </div>
 
     <script>
-        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzo-vXPBHVbgMcicqzsbyArkMMU9PFbpxgD4pUPJ_gNJqKO2JwlSbAiWbf9gxxhBt_t/exec";
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxY97itwzB_KRE4SOqSbNRh-m90LHk8PVStIcXnbSDVNnUOR5_-w1Ko63JCh66G4fyf/exec";
 
         let inventoryMaster = []; 
         let deliveryBatch = []; 
@@ -113,7 +115,7 @@
             fetch(WEB_APP_URL + "?action=getInventory")
                 .then(res => res.json())
                 .then(data => {
-                    inventoryMaster = data;
+                    inventoryMaster = data.inventory || data; 
                     loadDatalist();
                     document.getElementById('sync-status').innerText = "Connected";
                 })
@@ -124,17 +126,15 @@
 
         function loadDatalist() {
             const list = document.getElementById('inventory-data');
-            // Kunin ang mga unique names mula sa inventory
-            const uniqueNames = [...new Set(inventoryMaster.map(item => item[1]))];
+            const uniqueNames = [...new Set(inventoryMaster.map(item => item.name || item[1]))];
             list.innerHTML = uniqueNames.map(name => `<option value="${name}">`).join('');
         }
 
-        // Automatic na ilalagay ang presyo kapag pumili ng Item Name
         function autoFillPrice() {
             const name = document.getElementById('dr_name').value;
-            const match = inventoryMaster.find(i => i[1] === name);
+            const match = inventoryMaster.find(i => (i.name || i[1]) === name);
             if (match) {
-                document.getElementById('dr_price').value = match[2];
+                document.getElementById('dr_price').value = match.price || match[2];
             }
         }
 
@@ -156,12 +156,7 @@
                     if (exists) {
                         alert("Barcode na-scan na!");
                     } else {
-                        deliveryBatch.unshift({ 
-                            name: name, 
-                            barcode: barcode, 
-                            qty: 1, 
-                            price: price 
-                        });
+                        deliveryBatch.unshift({ name: name, barcode: barcode, qty: 1, price: price });
                         renderTable();
                     }
                     document.getElementById('dr_barcode').value = ""; 
@@ -209,7 +204,7 @@
             
             const btn = document.querySelector('.btn-upload');
             btn.disabled = true;
-            btn.innerText = "UPLOADING TO SHEETS...";
+            btn.innerText = "SENDING & NOTIFYING ADMIN..."; // Edited loading text
 
             fetch(WEB_APP_URL, {
                 method: "POST",
@@ -217,16 +212,16 @@
                 body: JSON.stringify(deliveryBatch)
             })
             .then(() => {
-                alert("Stocks successfully updated!");
+                alert("Naisend na sa Admin at may Email notification na ipinadala! Hintayin ang approval bago mabenta.");
                 deliveryBatch = [];
                 renderTable();
                 btn.disabled = false;
-                btn.innerText = "🚀 UPLOAD TO GOOGLE SHEETS";
+                btn.innerText = "🚀 SEND FOR ADMIN APPROVAL";
             })
             .catch(err => {
                 alert("Error connecting to server.");
                 btn.disabled = false;
-                btn.innerText = "🚀 UPLOAD TO GOOGLE SHEETS";
+                btn.innerText = "🚀 SEND FOR ADMIN APPROVAL";
             });
         }
     </script>
