--- a/transactions.html
+++ b/transactions.html
@@ -14,6 +14,7 @@
             <a href="POS.html" class="menu-item"><i>🛒</i> Point of Sale</a>
             <a href="transactions.html" class="menu-item active"><i>📜</i> Transactions</a>
             <a href="delivery.html" class="menu-item"><i>🚚</i> Stock Delivery</a>
+            <a href="pullout.html" class="menu-item"><i>📤</i> Stock Pull Out</a>
 			<a href="cashier_approvals.html" class="menu-item"><i>⏳</i> My Pending Stocks</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
@@ -48,7 +49,7 @@
     </div>
 
     <script>
-    const SHEETS_URL = "https://script.google.com/macros/s/AKfycbz1USQaikCAt_thoeLYfUD4p1vHmrPmY1Ik8tNb_ghLwYhZmlKALjsK8Webs4g_XtP5/exec";
+    const SHEETS_URL = "https://script.google.com/macros/s/AKfycbwwkcQnmXYG_E3Z9rJGyZ9dlluJ9nPFs9GeWZt211ZyEbN0wxHf9MFjXRE6NLh0fh0t/exec";
     
     async function loadTransactions() {
         const status = document.getElementById('sync-status');
