--- a/stock_management.html
+++ b/stock_management.html
@@ -27,7 +27,7 @@
 
         /* SIDEBAR - Clean No-Dropdown Style */
         .sidebar {
-            width: var(--sidebar-width);
+            width: 350px;
             background-color: var(--primary);
             color: white;
             display: flex;
