--- a/delivery.html
+++ b/delivery.html
@@ -31,6 +31,7 @@
             <a href="delivery.html" class="menu-item active"><i>🚚</i> Stock Delivery</a>
             <a href="pullout.html" class="menu-item"><i>📤</i> Stock Pull Out</a>
             <a href="cashier_approvals.html" class="menu-item"><i>⏳</i> My Pending Stocks</a>
+            <a href="smmg_approval.html" class="menu-item"><i>🏢</i> Receive Warehouse</a>
             <a href="stocks.html" class="menu-item"><i>📦</i> Check Stocks</a>
             <a href="index.html" class="menu-item" style="margin-top: auto;"><i>🚪</i> Logout</a>
         </div>
