--- a/pending.html
+++ b/pending.html
@@ -74,8 +74,8 @@
                 <i>✅</i> Pending Approvals <span class="sidebar-badge" id="main-badge">0</span>
             </a>
             <a href="smmg_transactions.html" class="menu-link"><i>💸</i> Transactions</a>
+            <a href="transfer.html" class="menu-link"><i>🔄</i> Stock Transfer</a>
             <a href="stock_management.html" class="menu-link"><i>📦</i> Stock Management</a>
-            <a href="#" class="menu-link"><i>📋</i> Inventory Reports</a>
             <a href="index.html" class="menu-link" style="margin-top: auto; color: #ff5e57;"><i>🚪</i> Logout</a>
         </div>
     </div>
