--- a/admin.html
+++ b/admin.html
@@ -69,8 +69,9 @@
         <div class="sidebar-brand">ADMIN PANEL</div>
         <div class="sidebar-menu">
             <a href="admin.html" class="menu-link active"><i>📊</i> Dashboard</a>
+            <a href="admin_delivery.html" class="menu-link"><i>📥</i> Warehouse Direct Entry</a>
             <a href="pending.html" class="menu-link">
-                <i>✅</i> Pending Approvals <span class="sidebar-badge" id="main-pending-badge">0</span>
+                <i>✅</i> Pending Approvals <span class="sidebar-badge" id="main-pending-badge"></span>
             </a>
             <a href="smmg_transactions.html" class="menu-link"><i>💸</i> Transactions</a>
             <a href="transfer.html" class="menu-link"><i>🔄</i> Stock Transfer</a>
